--- a/css/actions.css
+++ b/css/actions.css
@@ -98,7 +98,7 @@ body {
     p {
         font-size: 20px;
         margin-top: 25px;
-        color: #ff55cc !important;
+        color: #a80075 !important;
         /* text-shadow: 1px 3px 5px #ff8edd; */
     }
 }
@@ -107,13 +107,17 @@ body {
     box-shadow: 0px 0px 2px 0.1px #a3859a !important;
     background: url(logo_1.PNG) #fff7fd no-repeat 90% 90%;
     background-size: 75px;
-
+    padding: 50px;
+    color: #ff00b2 !important;
     p {
         /* background: #fff7fd; */
         color: #ff00b2 !important;
         font-size: 12px;
-        padding: 50px;
         margin: 0px;
+    }
+    h4{
+        color: #a80075 !important;
+        margin-bottom: 10px;
     }
 }
 
@@ -161,6 +165,23 @@ footer {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff55cc'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
 }
 
+.loginSignup ul li {
+    background: #ffd7f3;
+    width: 50%;
+    text-align: center;
+    color:#ff55cc !important;
+
+    *{
+        color:#ff55cc !important;
+    }
+
+    
+}
+
+#signup{
+    display: none;
+}
+
 form {
     background-color: #ffd7f3;
     padding: 50px;
@@ -179,6 +200,11 @@ form {
     }
     a{
         color:blue !important;
+    }
+    h4{
+        margin-bottom: 20px;
+        margin-left: 5px;
+        color: #a80075 !important;
     }
     
 }
