--- a/css/actions.css
+++ b/css/actions.css
@@ -105,7 +105,7 @@ body {
 
 .textDiv {
     box-shadow: 0px 0px 2px 0.1px #a3859a !important;
-    background: url(logo_1.PNG) #fff7fd no-repeat 90% 90%;
+    background: url(images/logo_1.PNG) #fff7fd no-repeat 90% 90%;
     background-size: 75px;
     padding: 50px;
     color: #ff00b2 !important;
