--- a/css/actions.css
+++ b/css/actions.css
@@ -36,7 +36,7 @@ nav {
 
 .navbar-toggler {
     padding: 0.25rem 1rem;
-    border: 1px solid #ff00b2 !important;
+    border: 1px solid #a80075 !important;
     background: #ffd7f3;
 
     span {
@@ -80,7 +80,7 @@ body {
 
 .bannerDiv {
     background: #ffd7f3;
-    /* background: url(logo_1.PNG) #ffd7f3 no-repeat 222px 25px;
+    /* background: url(../images/logo_1.PNG) #ffd7f3 no-repeat 222px 25px;
             background-size: 160px; */
 }
 
@@ -105,14 +105,14 @@ body {
 
 .textDiv {
     box-shadow: 0px 0px 2px 0.1px #a3859a !important;
-    background: url(images/logo_1.PNG) #fff7fd no-repeat 90% 90%;
+    background: url(../images/logo_1.PNG) #fff7fd no-repeat 90% 90%;
     background-size: 75px;
     padding: 50px;
-    color: #ff00b2 !important;
+    color: #a80075 !important;
     p {
         /* background: #fff7fd; */
-        color: #ff00b2 !important;
-        font-size: 12px;
+        color: #a80075 !important;
+        font-size: 14px;
         margin: 0px;
     }
     h4{
@@ -128,7 +128,7 @@ footer {
         margin: 10px;
         text-decoration: none;
         font-size: 12px !important;
-        color: #ff55cc !important;
+        color: #a80075 !important;
     }
 
     p {
@@ -149,7 +149,7 @@ footer {
     }
 
     * {
-        color: #ff55cc !important;
+        color: #a80075 !important;
     }
 }
 
@@ -158,21 +158,21 @@ footer {
 }
 
 .carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff55cc'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e") !important;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23a80075'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e") !important;
 }
 
 .carousel-control-next-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff55cc'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23a80075'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
 }
 
 .loginSignup ul li {
     background: #ffd7f3;
     width: 50%;
     text-align: center;
-    color:#ff55cc !important;
+    color:#a80075 !important;
 
     *{
-        color:#ff55cc !important;
+        color:#a80075 !important;
     }
 
     
@@ -186,7 +186,7 @@ form {
     background-color: #ffd7f3;
     padding: 50px;
     * {
-        color:#ff55cc !important;
+        color:#a80075 !important;
     }
     input, option, select {
         color: black !important;
@@ -207,4 +207,23 @@ form {
         color: #a80075 !important;
     }
     
+}
+
+/* CSS for ERROR Page */
+.errorpage {
+    padding: 20px;
+    background: #ffd7f3;
+    p {
+        margin: auto;
+        border: 5px solid #a80075;
+        padding: 20px;
+        text-align: center;
+        color: #a80075 !important;
+    }
+    h5{
+        margin: 10px;
+        border: 5px solid #a80075;
+        padding: 10px;
+        text-align: center;
+    }
 }
