--- a/css/actions.css
+++ b/css/actions.css
@@ -112,13 +112,16 @@ body {
     p {
         /* background: #fff7fd; */
         color: #a80075 !important;
-        font-size: 14px;
+        font-size: 16px;
         margin: 0px;
     }
     h4{
         color: #a80075 !important;
         margin-bottom: 10px;
     }
+}
+.active {
+    box-shadow: 0px 0px 1px 0.1px #bb2e90;
 }
 
 footer {
