--- a/css/actions.css
+++ b/css/actions.css
@@ -120,7 +120,7 @@ body {
         margin-bottom: 10px;
     }
 }
-.active {
+.loginSignup .active {
     box-shadow: 0px 0px 1px 0.1px #bb2e90;
 }
 
