--- a/css/actions.css
+++ b/css/actions.css
@@ -124,6 +124,11 @@ body {
     box-shadow: 0px 0px 1px 0.1px #bb2e90;
 }
 
+.hearting{
+    position: absolute;
+    width: 20px;
+}
+
 footer {
     text-align: center;
 
