--- a/css/actions.css
+++ b/css/actions.css
@@ -112,7 +112,7 @@ body {
     p {
         /* background: #fff7fd; */
         color: #a80075 !important;
-        font-size: 16px;
+        font-size: 18px;
         margin: 0px;
     }
     h4{
@@ -140,7 +140,7 @@ footer {
     }
 
     p {
-        margin-top: 20px;
+        margin-top: 0px;
         font-size: 12px !important;
     }
 }
@@ -215,6 +215,148 @@ form {
         color: #a80075 !important;
     }
     
+}
+
+/* Carousel CSS */
+.sliding-here {
+    background: #ffd7f3;
+    margin: 0px;
+    height: 300px;
+    display: grid;
+    grid-template-rows: 90% 5% 5%;
+    grid-template-columns: 37.5% 5% 5% 5% 5% 5% 37.5%;
+    align-items: center;
+    justify-items: center;
+    img {
+        width: 40%;
+        height: 40%;
+        border-radius: 50%;
+        margin: 0px;
+    }
+    .name{
+        margin: 5px;
+        color: #a80075 !important;
+        font-weight: 800;
+    }
+    .description {
+        margin: 5px;
+    }
+    #myCarousel {
+        grid-row: 1/2;
+        grid-column: 1/8;
+        width: 95%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        transform-style: preserve-3d;
+        perspective: 250px;
+        --items:5;
+        --middle:3;
+        --position:1;
+        pointer-events: none;
+    }
+    .myitem{
+        text-align: center;
+        padding: 20px;
+        border: 3px solid #a80075;
+        border-radius: 20px;
+        position: absolute;
+        width: 50%;
+        height: 75%;
+        background-color: #fff7fd;
+        --r: calc( var(--position) - var(--offset) );
+        --abs: max( calc( var(--r)*-1 ), var(--r) );
+        transition: all 0.25s linear;
+        transform: rotateY( calc( -10deg * var(--r) ) ) translateX( calc( -50% * var(--r) ) );
+        z-index: calc( var(--position) - var(--abs) );
+    }
+    input[type='radio'] {
+        visibility: hidden;
+    }
+    input[type='radio']:after {
+        width: 15px;
+        height: 15px;
+        border-radius: 15px;
+        top: -2px;
+        left: -1px;
+        position: relative;
+        background-color: #d1d3d1;
+        content: '';
+        display: inline-block;
+        visibility: visible;
+        border: 2px solid white;
+    }
+    input[type='radio']:checked:after {
+        width: 15px;
+        height: 15px;
+        border-radius: 15px;
+        top: -2px;
+        left: -1px;
+        position: relative;
+        background-color: #ffa500;
+        content: '';
+        display: inline-block;
+        visibility: visible;
+        border: 2px solid white;
+    }
+    div.myitem:nth-of-type(1){
+        --offset :1;
+    }
+    div.myitem:nth-of-type(2){
+        --offset :2;
+    }
+    div.myitem:nth-of-type(3){
+        --offset :3;
+    }
+    div.myitem:nth-of-type(4){
+        --offset :4;
+    }
+    div.myitem:nth-of-type(5){
+        --offset :5;
+    }
+
+    input:nth-of-type(1){
+        grid-row: 2/2;
+        grid-column: 3/2;
+    }
+    input:nth-of-type(1):checked ~ main#myCarousel{
+        --position:1;
+    }
+
+    input:nth-of-type(2){
+        grid-row: 2/2;
+        grid-column: 4/3;
+    }
+    input:nth-of-type(2):checked ~ main#myCarousel{
+        --position:2;
+    }
+
+    input:nth-of-type(3){
+        grid-row: 2/2;
+        grid-column: 5/4;
+    }
+    input:nth-of-type(3):checked ~ main#myCarousel{
+        --position:3;
+    }
+
+    input:nth-of-type(4){
+        grid-row: 2/2;
+        grid-column: 6/5;
+    }
+    input:nth-of-type(4):checked ~ main#myCarousel{
+        --position:4;
+    }
+    
+    input:nth-of-type(5){
+        grid-row: 2/2;
+        grid-column: 7/6;
+    }
+    input:nth-of-type(5):checked ~ main#myCarousel{
+        --position:5;
+    }
+   
 }
 
 /* CSS for ERROR Page */
