--- a/css/actions.css
+++ b/css/actions.css
@@ -228,8 +228,8 @@ form {
     align-items: center;
     justify-items: center;
     img {
-        width: 40%;
-        height: 40%;
+        width: 60px;
+        height: 60px;
         border-radius: 50%;
         margin: 0px;
     }
