--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
     p {
         font-size: 20px;
         margin-top: 25px;
+        margin-bottom: 25px;
         color: #a80075 !important;
     }
 }
@@ -65,6 +66,7 @@ body {
 .carousel {
     background: url(../images/logo_1.PNG) #fff7fd no-repeat 90% 90%;
     background-size: 75px;
+    padding: 0px;
 }
 
 .hearting{
