--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,7 @@ body {
 }
 
 .carousel {
-    background: url(../images/logo_1.PNG) #fff7fd no-repeat 90% 90%;
-    background-size: 75px;
-    padding: 0px;
+    padding: 0px !important;
 }
 
 .hearting{
