--- a/css/modal-style.css
+++ b/css/modal-style.css
@@ -1,10 +1,62 @@
 /* Modal Configuation */
 
-#aboutusButton {
-    position: absolute;
-    top: -20px;
-    z-index: 999;
-    right: 0;
-    border-radius: 50%;
-    border: 2px solid white;
+#aboutusModal{
+    .content {
+        padding: 10px;
+        margin: 10px;
+        border: none;
+    }
+    h4 {
+        text-align: center;
+        margin: 20px;
+    }
+    p {
+        margin: 20px;
+    }
+    #aboutusButton {
+        position: absolute;
+        top: -20px;
+        z-index: 999;
+        right: 0;
+        border-radius: 50%;
+        border: 2px solid white;
+    }
+}
+
+#contactusModal {
+    .content {
+        padding: 10px;
+        margin: 10px;
+        border: none;
+    }
+    h4 {
+        text-align: center;
+        margin: 20px;
+    }
+}
+
+#shareModal {
+    .content {
+        text-align: center;
+    }
+    h4 {
+        margin: 20px;
+    }
+    p {
+        margin: 20px;
+    }
+    button {
+        width: 100%;
+    }
+    .col-md-2 {
+        display: inline-block;
+        margin: 10px;
+        text-align: center;
+    }
+    .icon {
+        width: 50px;
+        height: 50px;
+        margin: 10px;
+        background-size: 100%;
+    }
 }
