--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,20 @@
 /* main css */
 
+@font-face {
+    font-family: myFont;
+    src: url("FonxT-Regular.otf") format("opentype");
+}
+
+@font-face {
+    font-family: myFont;
+    font-weight: bold;
+    src: url("FonxT-Regular.otf") format("opentype");
+}
+
 body {
     * {
         color: rgb(0, 0, 0) !important;
-        font-family: cursive;
+        font-family: myFont;
     }
 }
 
