--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,18 @@ body {
     padding: 0px !important;
 }
 
+.games {
+    .card {
+        display: inline-block;
+        width: 45%;
+        border: 1px solid #ab27708a;
+        margin: 2px;
+        border-radius: 20px;
+        overflow: hidden;
+        box-shadow: 0px 0px 10px 0.1px #ab27709c;
+    }
+}
+
 .hearting{
     position: absolute;
     width: 20px;
